Update Dockerfile to increase memory and enable whitelist